# base64

./: .gitignore  CMakeLists.txt  LICENSE  base64.c  base64.h  base64_app.c  build.bat  build_cl.bat  build_clang.bat
src/: CMakeLists.txt  base64.c  base64.h  base64_app.c  base64_file.c  base64_file.h
test/: base64Tests.py  decoded0  decoded6  decoded7  decoded8  encoded.txt  encoded6  encoded7  encoded8
